# stock-analysis

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PR_BODY.md  README.md  README.zh-CN.md  ROADMAP.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
agent-workflows/: commands.json
assets/: README.md
claude-commands/: data-diagnose.md  earnings-review.md  fund-review.md  market-recap.md  portfolio-review.md  price-move.md  research-workspace.md  stock-review.md  stock-screen.md  stock-snapshot.md  thesis-create.md  thesis-review.md
codex-prompts/: data-diagnose.md  earnings-review.md  fund-review.md  market-recap.md  portfolio-review.md  price-move.md  research-workspace.md  stock-review.md  stock-screen.md  stock-snapshot.md  thesis-create.md  thesis-review.md
config/: metric_registry.json
docs/: PROMOTION.md  PROMOTION_MEMORY.md  SCREENING_PHASE0.md
examples/: README.md  agent.md  company-expectations.example.json  github-actions-daily-recap.yml
references/: analysis-template.md  eastmoney-api.md  futu-api.md  yahoo-finance-api.md
reports/: 20260617-daily-recap.md  20260702-daily-recap.md  20260708-512480-半导体ETF基金分析.md  20260708-巴菲特-行情复盘.md  20260708-巴菲特-贵州茅台600519.md  20260708-投委会-行情复盘.md  20260708-数据缺口审计与补全说明.md  20260708-西蒙斯-行情复盘.md  20260708-西蒙斯-贵州茅台600519.md  20260709-512480-半导体ETF基金分析.md  20260709-巴菲特-行情复盘.md  20260709-巴菲特-贵州茅台600519.md  20260709-投委会-行情复盘.md  20260709-西蒙斯-行情复盘.md  20260709-西蒙斯-贵州茅台600519.md  README.md
schemas/: company-committee.schema.json  company-evidence.schema.json  company-lens-opinion.schema.json  fund-evidence.schema.json  reached-primary-evidence.schema.json  research-claim.schema.json  research-workspace.schema.json  thesis.schema.json
scripts/: aftermarket.py  install-agent-entrypoints.sh  screening_contract_check.py  sync_agent_entrypoints.py
tests/: test_analytics.py  test_app.py  test_calculators.py  test_chinese_public_sources.py  test_company_lens.py  test_company_workflows.py  test_csi_index.py  test_evidence_quality.py  test_execution_costs.py  test_expectations.py  test_financial_snapshot.py  (+31 more)
(+125 files in other folders)
