[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "stock-analysis"
version = "4.3.6"
description = "Evidence-driven global stock recap skill with portfolio analysis and resilient multi-source routing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AdvancingTitans" }]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
