[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "stock-analysis"
version = "4.12.0"
description = "Evidence-driven global stock recap skill with portfolio analysis and resilient multi-source routing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AdvancingTitans" }]
dependencies = [
  "pypdf>=5,<7",
  "requests>=2.31",
  "xlrd>=2.0,<3",
]

[project.scripts]
stock-analysis = "stock_analysis.app:run"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis"]

[tool.hatch.build.targets.wheel.force-include]
"skills/stock-analysis/config/lenses" = "stock_analysis/lens_config"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/skills/stock-analysis",
  "/schemas",
  "/agent-workflows",
  "/claude-commands",
  "/codex-prompts",
  "/codex-skills",
  "/tests",
  "/README.md",
  "/README.zh-CN.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
